# Clinical-Decision-Support-Multi-Agent-System

./: LANGGRAPH_PLAN.md  README.md  docker-compose.full.yml  pyproject.toml  requirements.txt
api/: Dockerfile
compose/: docker-compose.dev.yml
docker/api/: Dockerfile  Dockerfile.dev
docs/: api.md  architecture.md
scripts/: run_agent.py  run_api.py
src/agents/: __init__.py  graph.py  org_matcher.py  state.py  supervisor.py  tool_finder.py  workflow_advisor.py
src/api/: README.md  app.py  schemas.py
src/api/routes/: agent.py  health.py  threads.py
src/retrievers/: __init__.py  base.py  orgs_retriever.py  tools_retriever.py
tests/: conftest.py
tests/integration/: test_api_e2e.py  test_graph_e2e.py
tests/mocks/: __init__.py  mock_db.py  mock_embeddings.py
tests/unit/: test_org_matcher.py  test_retrievers.py  test_state.py  test_supervisor.py  test_tool_finder.py
ui/: Dockerfile  index.html  package-lock.json  package.json
ui/src/: App.tsx
ui/src/components/: Chat.tsx
